[package]
name = "luna-jit-llvm"
description = "LLVM 18 + inkwell 0.9 alternative JIT backend for the goliajp/luna Lua runtime. Lives alongside `luna-jit` (Cranelift); backend selection at runtime via the `LUNA_JIT_BACKEND=llvm` env var. Internal alt-backend crate — embedders should depend on `luna-jit` and enable the `llvm-jit` feature, not depend on this crate directly. Requires `LLVM_SYS_181_PREFIX` pointing at an LLVM 18.1.x install at build time."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
# v2.1 Phase 1K.D.2 — published as crates.io companion to luna-jit so
# embedders can flip the `llvm-jit` feature on. Default `cargo install
# luna-jit` does NOT pull this crate (the feature is OFF by default).
# Removing `publish = false` here is what unblocks `cargo publish -p
# luna-jit`'s verify step, which refuses path-only deps (even when
# `optional = true`).

[lints]
workspace = true

[dependencies]
# v2.1 Phase 1K.D.2 — backend implements the luna-core `IntChunkCompiler`
# / `TraceCompiler` / `JitStorage` traits over LLVM-emitted mcode.
luna-core = { path = "../luna-core", version = "= 2.2.0" }

# v2.1 Phase 1K.D.2 — extracted `luna_jit_*` runtime helpers + `JIT_VM`
# TLS shared with luna-jit (Cranelift). Both backends register the
# same symbol table with their respective JIT execution engines.
luna-jit-helpers = { path = "../luna-jit-helpers", version = "= 2.2.0" }

# v2.1 Phase 1K.B / 1K.D.2 — LLVM 18.1.x via inkwell 0.9.0. Same
# feature flag as `llvm-jit-probe` (`llvm18-1`); requires
# `LLVM_SYS_181_PREFIX` env var pointing at an LLVM 18.1.x install
# (e.g. `brew install llvm@18` → `/opt/homebrew/opt/llvm@18`). See
# `.dev/rfcs/v2.1-phase-1k-b-llvm-hello-world.md` for repro details.
inkwell = { version = "0.9", features = ["llvm18-1"] }

[dev-dependencies]
# Integration tests need luna-jit's parser (to materialise real
# Proto bytecode) for the Phase 1K.D.6 smoke. luna-jit pulls Cranelift
# but only at test build-time; the lib's runtime dep graph stays
# Cranelift-free. Path-only dev-dep is allowed by `cargo publish` —
# dev-dependencies without a version are stripped from the published
# manifest because consumers don't need them.
luna-jit = { path = "../luna-jit" }
