[package]
name = "luna-jit"
description = "A Lua runtime in pure Rust — full 5.1/5.2/5.3/5.4/5.5 support. Equivalent to `luna-core` plus a Cranelift-backed JIT (method + trace) and the lua.h-compatible C ABI. (The `luna` crate name on crates.io is taken by an unrelated utility library; this crate is the JIT-equipped variant of the goliajp/luna Lua runtime.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

# rlib: Rust embedders. cdylib + staticlib: existing C/C++ hosts can link
# against luna through its `capi` module (lua.h-compatible subset).
[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "luna"
path = "src/bin/luna.rs"

[lints]
workspace = true

[dependencies]
# v1.1 A1 — pure-interp + JIT trait surface lives here. `version = "= 1.3.0"`
# pins the matching luna-core release for `cargo publish` lookups when the
# `path` fallback isn't in play.
luna-core = { path = "../luna-core", version = "= 1.3.0" }

# JIT backend. cranelift is the mainstream Rust codegen for embedded
# JITs (wasmtime, cg_clif, etc.). aarch64 + x86-64 from day one,
# mature regalloc + opt. luna lowers Lua bytecode → Cranelift IR →
# mmap RWX. Pinned: API churns enough that floating without a lock
# would burn audit time.
cranelift = "0.124"
cranelift-jit = "0.124"
cranelift-module = "0.124"
cranelift-codegen = "0.124"
cranelift-frontend = "0.124"
cranelift-native = "0.124"

# v1.2 D2 (P-A1 audit): criterion as luna-jit-only dev-dep. The luna-core
# 0-third-party-dep contract is unaffected (CI `zero-dep` job verifies).
# `harness = false` on bench targets stays — criterion ships its own
# bench harness. macOS local variance gate: 2.5% (M-series with no
# public CPU pin API); Linux CI variance gate: ~1-2% via `taskset -c 1`.
[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "lua_microbench"
harness = false

[[bench]]
name = "cross_dialect"
harness = false

[[bench]]
name = "run_only"
harness = false

[[bench]]
name = "redis_lua_shape"
harness = false
