[package]
name = "luna-jit"
description = "A Lua runtime in pure Rust — full 5.1/5.2/5.3/5.4/5.5 support. Equivalent to `luna-core` plus a Cranelift-backed JIT (method + trace) and the lua.h-compatible C ABI. (The `luna` crate name on crates.io is taken by an unrelated utility library; this crate is the JIT-equipped variant of the goliajp/luna Lua runtime.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

# rlib: Rust embedders. cdylib + staticlib: existing C/C++ hosts can link
# against luna through its `capi` module (lua.h-compatible subset).
[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "luna"
path = "src/bin/luna.rs"

[lints]
workspace = true

[dependencies]
# v1.1 A1 — pure-interp + JIT trait surface lives here. `version = "= 2.6.0"`
# pins the matching luna-core release for `cargo publish` lookups when the
# `path` fallback isn't in play.
luna-core = { path = "../luna-core", version = "= 2.6.0" }

# v1.3 UD3 — `#[derive(LuaUserdata)]` + `#[lua_userdata_methods]`
# proc-macros. Re-exported in `lib.rs` so embedders can `use
# luna_jit::LuaUserdata;` for both the trait (via luna-core re-export)
# and the derive. Adds `syn` + `quote` + `proc-macro2` to luna-jit's
# build-time supply chain ONLY; luna-core stays 0-dep.
luna-jit-derive = { path = "../luna-jit-derive", version = "= 2.6.0" }

# v2.1 Phase 1K.D.1 — extracted `luna_jit_*` helper / TLS / enter_jit
# crate. luna-jit re-exports `pub use luna_jit_helpers::*;` from
# `jit_backend/mod.rs` so existing `crate::jit_backend::luna_jit_*` /
# `super::luna_jit_*` paths resolve unchanged. luna-jit-llvm (Phase
# 1K.D.2+) depends on this crate directly without pulling Cranelift.
# `version = "= 2.6.0"` pin matches the workspace version so the
# crates.io resolver picks the exact matching release when embedders
# bypass the `path` fallback.
luna-jit-helpers = { path = "../luna-jit-helpers", version = "= 2.6.0" }

# v2.1 Phase 1K.D — LLVM 18 + inkwell 0.9 alternative JIT backend
# crate. Optional behind the `llvm-jit` cargo feature (default OFF)
# so the standard install path keeps Cranelift as the only JIT
# backend and the LLVM toolchain (~1 GB system deps) is not pulled
# into default builds. Embedders flip the backend at runtime via
# the `LUNA_JIT_BACKEND=llvm` env var (1K.D.4). See
# `.dev/rfcs/v2.1-phase-1k-c-trait-audit.md` § 4.3. `version = "= 2.6.0"`
# pin required even for optional deps when the parent crate is
# `publish = true`.
luna-jit-llvm = { path = "../luna-jit-llvm", version = "= 2.6.0", optional = true }

# JIT backend. cranelift is the mainstream Rust codegen for embedded
# JITs (wasmtime, cg_clif, etc.). aarch64 + x86-64 from day one,
# mature regalloc + opt. luna lowers Lua bytecode → Cranelift IR →
# mmap RWX. Pinned: API churns enough that floating without a lock
# would burn audit time.
cranelift = "0.124"
cranelift-jit = "0.124"
cranelift-module = "0.124"
cranelift-codegen = "0.124"
cranelift-frontend = "0.124"
cranelift-native = "0.124"

# v1.3 R3 — optional rustyline-powered REPL polish (tab completion
# against Vm globals + Lua syntax highlighting + native
# `~/.luna_history`). Opt-in via `--features repl-line-editor`.
#
# Default `cargo install luna-jit` does NOT pull rustyline — the v1.2
# REPL (multi-line continuation + plain-text history) stays the
# baseline so the shipped binary stays small and the supply-chain
# surface unchanged. luna-core remains 0-third-party-dep regardless;
# this dep lives in luna-jit only.
rustyline = { version = "14", optional = true }

[features]
# v1.3 R3 — opt-in REPL polish. See the `rustyline` dep comment above.
# CI builds both with and without this feature (see .github/workflows/ci.yml
# `repl-line-editor` job) so the default-feature surface keeps verifying.
repl-line-editor = ["dep:rustyline"]

# v2.1 Phase 1K.D.3 — opt-in LLVM 18 alt JIT backend. Default OFF;
# Cranelift remains the default backend. With this feature enabled,
# the `LUNA_JIT_BACKEND=llvm` env var (read by
# `install_default_jit` at Vm-construction time, Phase 1K.D.4)
# selects the LLVM backend; unset / `cranelift` keeps Cranelift.
# A `panic!` with a helpful hint fires at install time when the env
# var is `llvm` but the feature is OFF.
#
# Local dev requires `LLVM_SYS_181_PREFIX` pointing at an LLVM 18.1.x
# install (e.g. `brew install llvm@18` →
# `/opt/homebrew/opt/llvm@18`). CI matrix gate lands in Phase 1K.D
# follow-up — see `.dev/rfcs/v2.1-phase-1k-c-trait-audit.md` § 4.3.
llvm-jit = ["dep:luna-jit-llvm"]

# v1.3 Phase SS-B — forward the `send` feature to luna-core so embedders
# pulling `luna-jit --features send` automatically get
# `luna_jit::vm::SendVm` (re-exported via the crate's `pub use luna_core::*`
# tree). The luna-jit crate itself adds no extra Send-specific code; the
# JIT backend stays bound to bare `Vm` because v1.3 ships `SendVm`
# interp-only.
send = ["luna-core/send"]

# v1.2 D2 (P-A1 audit): criterion as luna-jit-only dev-dep. The luna-core
# 0-third-party-dep contract is unaffected (CI `zero-dep` job verifies).
# `harness = false` on bench targets stays — criterion ships its own
# bench harness. macOS local variance gate: 2.5% (M-series with no
# public CPU pin API); Linux CI variance gate: ~1-2% via `taskset -c 1`.
[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "lua_microbench"
harness = false

[[bench]]
name = "cross_dialect"
harness = false

[[bench]]
name = "run_only"
harness = false

[[bench]]
name = "redis_lua_shape"
harness = false

[[bench]]
name = "bench_send_overhead"
harness = false
