[package]
name = "luna-runtime-helpers"
description = "Static-link runtime entry for AOT-produced binaries. Exposes a single C-ABI symbol `luna_aot_run(bytecode, len) -> i32` that constructs a luna `Vm`, `undump`s the embedded bytecode, calls the root chunk, and returns a process exit code. Built as a `staticlib` so `luna-aot`'s `cc` link step can statically pull it (plus rust stdlib) into the produced native binary. Also built as `rlib` so `luna-aot`'s integration tests can drive it via the Rust runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
# `staticlib` is what makes this useful at all — `cc` links the
# resulting `.a` into the AOT binary alongside the bytecode `.o` and
# the C `main` stub. `rlib` is kept so cargo's regular build graph
# (tests, examples) can also reach the `luna_aot_run` symbol via
# normal Rust imports (Rust integration tests can't link a staticlib
# directly without going through `cc`).
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
# The whole point of this crate: re-export a thin C-ABI entry that
# drives a luna-core Vm. luna-core stays 0-third-party-dep; the
# staticlib's transitive footprint is rust stdlib + luna-core only
# when the `jit-helpers` feature is OFF.
luna-core = { path = "../luna-core", version = "= 2.9.0" }

# v1.3 Stage 7 follow-on — opt-in dep on luna-jit so the 27
# `luna_jit_*` Cranelift helper symbols (table set/get, op_concat,
# upval_get, …) live inside the deploy-side staticlib. AOT binaries
# whose embedded `.o` calls trace mcode need these as resolved
# externals at link time; otherwise the link fails with
# "undefined reference to `_luna_jit_table_get_field`" et al.
#
# Trade-off documented in
# `.dev/rfcs/v1.3-rfc-trace-aot-relocation.md`:
#   - Pulls all of `luna-jit` (and transitively cranelift) into the
#     deploy-side staticlib at build time. `cc -Wl,--gc-sections`
#     (Linux) and Mach-O dead-strip remove unused cranelift code at
#     link time so the produced binary stays small in the common case
#     where the embedded `.o` only uses a handful of helpers.
#   - Audit option (a) — extract helpers to a third tiny crate
#     `luna-jit-helpers` — is cleaner but invasive (~2-3 dev-days of
#     thread-local + TLS refactor); option (b), used here, is the
#     pragmatic v1.3 floor and the architecturally honest unblocker
#     for "AOT binaries that actually fire AOT mcode".
#
# Gated behind a feature so non-AOT consumers of the runtime helpers
# (e.g. embedders who only want the `luna_aot_run` C-ABI entry for an
# interp-only deploy binary) don't pay the cranelift dep cost.
luna-jit = { path = "../luna-jit", version = "= 2.9.0", optional = true }

[features]
default = ["jit-helpers"]
# Re-export the 27 `luna_jit_*` Cranelift helper symbols from the
# staticlib so AOT binaries with trace mcode can link cleanly. See
# `Cargo.toml` `luna-jit` dep comment above for the trade-off.
jit-helpers = ["dep:luna-jit"]
