[package]
name = "luna-tools"
description = "Developer-facing inspection + introspection CLIs for luna's AOT binaries, heap snapshots, JIT state, profiling flamegraphs, and REPL polish. v2.0 Track TL Phase 1+2 ship: `luna-bin-inspect` (AOT section walker), `luna-heap-dump` (heap snapshot via pure-read accessors), `luna-trace-inspect` (JIT state dump), and `luna-profile` (Count-hook sampling profiler). `luna-repl-polish` remains a stub until rustyline `=14.x` pin — see `.dev/rfcs/v2.0-plan-state.md`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
# rlib only: luna-tools is a build of CLIs + shared format types
# (e.g. heap-dump JSON schema). No cdylib/staticlib because no host
# wants to link these as a library.
crate-type = ["rlib"]

[[bin]]
name = "luna-bin-inspect"
path = "src/bin/luna_bin_inspect.rs"

[[bin]]
name = "luna-heap-dump"
path = "src/bin/luna_heap_dump.rs"

[[bin]]
name = "luna-profile"
path = "src/bin/luna_profile.rs"

[[bin]]
name = "luna-trace-inspect"
path = "src/bin/luna_trace_inspect.rs"

[[bin]]
name = "luna-repl-polish"
path = "src/bin/luna_repl_polish.rs"

[lints]
workspace = true

[dependencies]
# luna-jit re-exports luna-core and provides the pure-read
# accessors (`luna_jit::inspect::*`) that `luna-heap-dump` /
# `luna-trace-inspect` / `luna-profile` consume. luna-tools depending
# on luna-jit (not luna-core directly) lets one Vm constructor
# (`luna_jit::new_with_jit`) cover both the "with-JIT" and
# "interp-only" embedding modes the inspection tools need.
luna-jit = { path = "../luna-jit", version = "= 2.1.0" }

# Common CLI plumbing across all 5 binaries.
clap = { version = "4", features = ["derive"] }

# Heap-dump + bin-inspect emit structured JSON via `--out json`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Section-walker for `luna-bin-inspect`. Same `object` crate
# luna-aot uses (read-side features); pinning to the same major
# version surface keeps the supply chain de-duplicated.
object = { version = "0.36", features = ["read", "elf", "macho", "pe"] }

# Optional: flamegraph rendering for `luna-profile`. Gated so
# embedders who only need bin-inspect / heap-dump don't pull
# `inferno`'s ~30-crate transitive closure into the build.
inferno = { version = "0.11", optional = true }

# Optional: kernel + JIT-mcode sampling for `luna-profile`. pprof
# uses `prost` internally so its closure is heavy; opt-feature
# only. Pinned >=0.14 to close RUSTSEC-2024-0408 (`TempFdArrayIterator::next`
# unsound misaligned `from_raw_parts` — panics under
# `ReportBuilder::build`); 0.13 was reachable only through the
# `flame-graph` feature but cargo-deny's `[advisories]` walks the
# whole lockfile regardless of feature gating.
pprof = { version = "0.15", optional = true }

# Optional: disassembly for `luna-trace-inspect --show mcode`.
# Capstone wraps a C library so it's a build-toolchain ask;
# opt-feature only.
capstone = { version = "0.12", optional = true }

[features]
# Default ships the two Phase 1 binaries fully wired. Phase 2
# tools (luna-profile / luna-trace-inspect / luna-repl-polish)
# compile as stubs without the extra deps; embedders that want
# the real impl opt in.
default = []
# v15.x rustyline is the pinned target for REPL polish in Phase 2.
# Listed as a placeholder feature today so future commits can land
# the dep + impl without re-opening the binary list.
repl-polish = []
flame-graph = ["dep:inferno", "dep:pprof"]
mcode-disasm = ["dep:capstone"]

[dev-dependencies]
# Smoke-test harness: per-binary `<bin> --help` exit-0 + small
# end-to-end golden assertions.
tempfile = "3"
